// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack loader should convert file (babel: false) 1`] = `
"import * as React from \\"react\\";

const SvgIcon = () => /*#__PURE__*/React.createElement(\\"svg\\", {
  width: 88,
  height: 88,
  xmlns: \\"http://www.w3.org/2000/svg\\"
}, /*#__PURE__*/React.createElement(\\"g\\", {
  stroke: \\"#063855\\",
  strokeWidth: 2,
  fill: \\"none\\",
  fillRule: \\"evenodd\\",
  strokeLinecap: \\"square\\"
}, /*#__PURE__*/React.createElement(\\"path\\", {
  d: \\"M51 37 37 51M51 51 37 37\\"
})));

export default SvgIcon;"
`;

exports[`webpack loader should convert file (typescript: true) 1`] = `
"var _g;

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

import * as React from \\"react\\";

var SvgIcon = function SvgIcon(props) {
  return /*#__PURE__*/React.createElement(\\"svg\\", _extends({
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, props), _g || (_g = /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export default SvgIcon;"
`;

exports[`webpack loader should convert file 1`] = `
"var _svg;

import * as React from \\"react\\";

var SvgIcon = function SvgIcon() {
  return _svg || (_svg = /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export default SvgIcon;"
`;

exports[`webpack loader should convert file 2`] = `
"var _svg;

import * as React from \\"react\\";

var SvgIcon = function SvgIcon() {
  return _svg || (_svg = /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export default SvgIcon;"
`;

exports[`webpack loader should support url-loader 1`] = `
"var _svg;

import * as React from \\"react\\";

var SvgIcon = function SvgIcon() {
  return _svg || (_svg = /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export { SvgIcon as ReactComponent };"
`;
